Pack Layout Implementation and csv edits

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>    
     <!-- Add HTML content, SVG drawing area, ... -->
-    <div id="force-graph"></div>
+    <div id="pack-layout"></div>
     <!-- D3 bundle -->
     <script src="js/d3.v6.min.js"></script>
 
     <!-- Our JS code -->
     <script src="js/scatterMatrix.js"></script>
     <script src="js/radarChart.js"></script>
+    <script src="js/packLayout.js"></script>
     <script src="js/forceGraph.js"></script>
     <script src="js/main.js"></script>
 </body>
