main axes/points code

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>D3 Project Starter Template</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>    
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <!-- Add HTML content, SVG drawing area, ... -->
     <div id="filter-panel"></div>
     <div id="pack-legend">
@@ -42,5 +42,5 @@
     <script src="js/forceGraph.js"></script>
     <script src="js/filterPanel.js"></script>
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
