unlinked filter panel with pack layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>    
     <!-- Add HTML content, SVG drawing area, ... -->
+    <div id="filter-panel"></div>
     <div id="pack-layout"></div>
     <!-- D3 bundle -->
     <script src="js/d3.v6.min.js"></script>
@@ -17,6 +18,7 @@
     <script src="js/radarChart.js"></script>
     <script src="js/packLayout.js"></script>
     <script src="js/forceGraph.js"></script>
+    <script src="js/filterPanel.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
