--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>D3 Project Starter Template</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>    
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <!-- Add HTML content, SVG drawing area, ... -->
     <div id="force-graph"></div>
+    <div id="radar-chart"></div>
     <!-- D3 bundle -->
     <script src="js/d3.v6.min.js"></script>
 
@@ -17,5 +18,5 @@
     <script src="js/radarChart.js"></script>
     <script src="js/forceGraph.js"></script>
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
