--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 <body>    
     <!-- Add HTML content, SVG drawing area, ... -->
     <div id="filter-panel"></div>
+    <div id="pack-legend">
+        <ul class="legend">
+            <li class="legend-btn" genre="action"><span class="legend-symbol"></span> Action</li>
+            <li class="legend-btn" genre="indie"><span class="legend-symbol"></span> Indie</li>
+            <li class="legend-btn" genre="adventure"><span class="legend-symbol"></span> Adventure</li>
+            <li class="legend-btn" genre="rpg"><span class="legend-symbol"></span> Role Playing Game</li>
+            <li class="legend-btn" genre="strategy"><span class="legend-symbol"></span> Strategy</li>
+            <li class="legend-btn" genre="simulation"><span class="legend-symbol"></span> Simulation</li>
+            <li class="legend-btn" genre="early-access"><span class="legend-symbol"></span> Early Access</li>
+            <li class="legend-btn" genre="casual"><span class="legend-symbol"></span> Casual</li>
+            <li class="legend-btn" genre="free-to-play"><span class="legend-symbol"></span> Free to Play</li>
+            <li class="legend-btn" genre="massively-multiplayer"><span class="legend-symbol"></span> Massively Multiplayer</li>
+            <li class="legend-btn" genre="sports"><span class="legend-symbol"></span> Sports</li>
+            <li class="legend-btn" genre="racing"><span class="legend-symbol"></span> Racing</li>
+            <li class="legend-btn" genre="miscellaneous"><span class="legend-symbol"></span> Miscellaneous</li>
+        </ul>
+        <ul class="legendType">
+            <li class="legendType-btn" production="aaa"><span class="legendType-symbol"></span> AAA</li>
+            <li class="legendType-btn" production="independent"><span class="legendType-symbol"></span> Independent</li>
+        </ul>
+    </div>
+        
     <div id="pack-layout"></div>
     <!-- D3 bundle -->
     <script src="js/d3.v6.min.js"></script>
