Pack layout hover and tooltip

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
         
     <div id="pack-layout"></div>
+    <div id="tooltip"></div>
 
     <!-- D3 bundle -->
     <script src="js/d3.v6.min.js"></script>
