Node links and click behaviour

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="radar-chart"></div>
     <div id="filter-panel"></div>
     <div id="pack-legend">
+        <div id="filter-panel"></div>
         <ul class="legend">
             <li class="legend-btn" genre="action"><span class="legend-symbol"></span> Action</li>
             <li class="legend-btn" genre="indie"><span class="legend-symbol"></span> Indie</li>
