--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <!-- Our JS code -->
     <script src="js/scatterMatrix.js"></script>
+    <script src="js/scatterFilter.js"></script>
     <script src="js/radarChart.js"></script>
     <script src="js/packLayout.js"></script>
     <script src="js/forceGraph.js"></script>
