adding radarChart to index.html

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </div>
     <div id="pack-layout"></div>
     <div id="scatter-matrix"></div>
+    <div id="radar-chart"></div>
     <div id="tooltip"></div>
 
     <!-- D3 bundle -->
