Node radius scaling and group labelling

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <!-- Add HTML content, SVG drawing area, ... -->
-    <div id="filter-panel"></div>
+              <div id="filter-panel"></div>
     <div id="pack-legend">
-      <ul class="legend">
+      <!--<ul class="legend">
         <li class="legend-btn" genre="action">
           <span class="legend-symbol"></span> Action
         </li>
@@ -50,7 +50,7 @@
         <li class="legend-btn" genre="miscellaneous">
           <span class="legend-symbol"></span> Miscellaneous
         </li>
-      </ul>
+      </ul>-->
       <ul class="legendType">
         <li class="legendType-btn" production="aaa">
           <span class="legendType-symbol"></span> AAA
@@ -60,7 +60,7 @@
         </li>
       </ul>
     </div>
-    <div id="pack-layout"></div>
+        <div id="pack-layout"></div>
     <div id="scatter-matrix"></div>
     <div id="radar-chart"></div>
     <div id="tooltip"></div>
