formatting radar and scatter

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Add HTML content, SVG drawing area, ... -->
-              <div id="filter-panel"></div>
+    <div id="filter-panel"></div>
     <div id="pack-legend">
       <!--<ul class="legend">
         <li class="legend-btn" genre="action">
@@ -60,9 +60,11 @@
         </li>
       </ul>
     </div>
-        <div id="pack-layout"></div>
-    <div id="scatter-matrix"></div>
-    <div id="radar-chart"></div>
+    <div id="pack-layout"></div>
+    <div id="charts-container">
+      <div id="scatter-matrix"></div>
+      <div id="radar-chart"></div>
+    </div>
     <div id="tooltip"></div>
 
     <!-- D3 bundle -->
