page title and favicon

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>D3 Project Starter Template</title>
+    <title>SteamVista: A Visual Journey Through Gaming Trends</title>
     <meta charset="UTF-8" />
-    <link rel="icon" href="data:;base64,iVBORwOKGO=" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
