change favicon filepath

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>SteamVista: A Visual Journey Through Gaming Trends</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
