edit header desc and add code comments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>SteamVista: A Visual Journey Through Gaming Trends</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -14,13 +14,14 @@
     <!-- Project title and description -->
     <div id="head">
       <h1 id="head-title">SteamVista: A Visual Journey Through Gaming Trends</h1>
-      <p id="head-desc">For industry analysts, navigating the labyrinth of the Steam gaming market presents a challenge. 
-        Amidst the expanding array of titles on the platform, deciphering strategic opportunities becomes both time-consuming and mentally taxing. 
-        This visualization can provide invaluable insights into consumer behaviour, market trends, and the current competitive landscape. 
-        Steam is one of the largest digital distribution platforms for PC gaming, with millions of users and a vast library of games. 
-        With this data visualization, they can make informed strategic decisions, such as targeting specific player demographics or recommend adjusting game development strategies to cater to emerging trends. 
-        For industry analysts, these visualizations offer the opportunity to study and understand the gaming market in-depth, making it easier to predict future trends and evaluate the performance of various titles. 
-        Ultimately, this tool has the potential to empower the gaming industry with actionable data insights that could enhance the overall gamer experience.<br>
+      <p id="head-desc">In the rapidly evolving world of digital gaming, industry analysts need precise and comprehensive tools to navigate the complex landscape of gaming trends and preferences. SteamVista is a visualization tool designed specifically for this purpose, harnessing the extensive dataset of Steam, the leading digital game distribution platform on the PC platform.
+
+        This tool caters directly to gaming industry analysts by providing a multifaceted view of Steam's game data. SteamVista integrates various aspects of game data – such as genres, user ratings, peak player count, and playtime statistics – into an intuitive and interactive visualization. By leveraging data visualizations like scatter matrices, radar charts, and pack layouts, the tool offers analysts a chance to obtain a deeper understanding of current market trends, gamer preferences, and the competitive landscape.
+
+        SteamVista's design focuses on delivering actionable insights. Analysts can explore data through multiple lenses – comparing genres, understanding the impact of pricing strategies, or examining player engagement across different game types. This holistic approach allows for a deep dive into the Steam gaming platform, facilitating strategic decisions backed by data.
+
+        The tool's interactive nature empowers users to tailor the data presentation to their specific needs, whether it's tracking the rise of indie games, analyzing the market share of different genres, or forecasting potential growth areas. SteamVista, with its comprehensive and customizable approach, stands as an indispensable asset for gaming industry analysts seeking to navigate the dynamic and competitive world of digital gaming.
+        <br>
         <br>
         <b>Begin by selecting a node on the bubble chart or the scatterplot matrix to highlight a game and display its respective radar chart. 
           Filters can be applied using the panel on the left to change the sample of games according to the applied filters.
