--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Opening animation -->
-    <img id="logo"src="/images/SteamVistaLogo.jpg" alt="SteamVistaLogo">
+    <img id="logo"src="images/SteamVistaLogo.jpg" alt="SteamVistaLogo">
     <div class="overlayAnimation first"></div>
     <div class="overlayAnimation second"></div>
     <div class="overlayAnimation third"></div>
